# atTariq_django

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
nginx/: default.template
src/: admin.py  urls.py
src/management/commands/: create_disciplines.py
src/migrations/: 0001_initial.py  0002_teacher_is_main.py  0003_statistic.py
src/models/: __init__.py  statistic_models.py  teacher_models.py
src/routers/: statistic_routers.py  teacher_routers.py
src/serializers/: base_serializers.py  statistic_serializers.py  teacher_serializers.py
src/views/v1/: statistic_views.py  teacher_views.py
